--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
               <ion-label>
                 {{p.title}}
               </ion-label>
+              <ion-label>
+                {{p.title}}
+              </ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
